--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "sw": "workbox generateSW workbox-config.js",
     "bundle": "rollup -c",
     "minify:css": "sqwish viewer.css -o viewer.css",
-    "gzip": "gzip -k9nrf index.html style/clock.css manifest.json icons/app.svg src/clock.js src/clock.bundle.js"
+    "gzip": "gzip -k9nrf index.html style/clock.css manifest.json icons/app.svg src/clock.js src/clock.bundle.js sw.js"
   },
   "dependencies": {
     "insights-js": "^1.2.9"
@@ -17,6 +17,7 @@
     "prettier": "^1.19.1",
     "rollup": "^1.27.5",
     "rollup-plugin-terser": "^5.2.0",
+    "snowpack": "^1.1.2",
     "sqwish": "^0.2.2",
     "workbox-cli": "^5.0.0"
   },
