Add travis script & insights d.ts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 node_modules
-web_modules
+web_modules/*
+!web_modules/*.d.ts
 
 sw.js
 sw.js.map
 workbox-*.js
 workbox-*.js.map
 !workbox-config.js
+src/clock.bundle.js
