--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,8 @@ jobs:
       - run: npm ci
       - run: npm run ci:lint
       - run: npm run ci:build
-      - uses: crazy-max/ghaction-github-pages@v2
+      - uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: gh-pages
-          build_dir: .
-          keep_history: true
-          jekyll: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: "./"
+          exclude_assets: ".github,node_modules"
