--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "ci:lint": "npm run lint -- --check",
     "sw": "workbox generateSW workbox-config.js",
     "ci:bundle": "rollup -c",
-    "ci:minify:css": "sqwish style/clock.css -o style/clock.css && sqwish style/settings.css -o style/settings.css",
+    "ci:minify:css": "csso style/clock.css -o style/clock.css && csso style/settings.css -o style/settings.css",
     "gzip": "gzip -k9nrf index.html settings.html style/clock.css style/settings.css manifest.json icons/app.svg icons/tigeroakes.svg src/clock.js src/clock.bundle.js src/settings.js src/settings.bundle.js sw.js"
   },
   "dependencies": {
-    "insights-js": "^1.2.9"
+    "insights-js": "^1.2.10"
   },
   "devDependencies": {
-    "prettier": "^2.1.1",
-    "rollup": "^2.26.11",
+    "csso-cli": "^3.0.0",
+    "prettier": "^2.2.1",
+    "rollup": "^2.34.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url-resolve": "^0.1.1",
-    "sqwish": "^0.2.2",
     "workbox-cli": "^5.1.4"
   },
   "prettier": {
