--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: "./"
-          exclude_assets: ".github,node_modules"
+          exclude_assets: ".github,.gitignore,node_modules"
