--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-clock",
   "private": true,
   "scripts": {
-    "lint": "prettier \"src/clock.js\" \"style/**/*.css\" \"*.{html,md,json,yml}\" \"{workbox-,rollup.}config.js\"",
+    "lint": "prettier \"src/*.{js,ts}\" \"style/**/*.css\" \"*.{html,md,json,yml}\" \"{workbox-,rollup.}config.js\"",
     "format": "npm run lint -- --write",
     "ci:build": "npm run ci:bundle && npm run ci:minify:css && npm run sw && npm run gzip",
     "ci:lint": "npm run lint -- --check",
@@ -16,11 +16,11 @@
   },
   "devDependencies": {
     "csso-cli": "^3.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "~2.3.0",
     "rollup": "^2.34.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-url-resolve": "^0.1.1",
-    "workbox-cli": "^5.1.4"
+    "workbox-cli": "^6.1.5"
   },
   "prettier": {
     "singleQuote": true,
