--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
 node_modules
-web_modules/*
-!web_modules/*.d.ts
-
-sw.js
-sw.js.map
-workbox-*.js
-workbox-*.js.map
-!workbox-config.js
-src/*.bundle.js
+dist
