--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,12 +3,13 @@
     "lib": ["dom"],
     "target": "esnext",
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "checkJs": true
   },
   "include": [
     "src/**/*.js",
-    "src/missing-types.d.ts",
     "workbox-config.js",
-    "rollup.config.js"
+    "rollup.config.js",
+    "vite.config.js"
   ]
 }
