--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: '14'
       - run: npm ci
       - run: npm run lint
-      - run: npm run build
+      - run: npm run build -- --base=/gameclock/
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
