--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "build": "vite build",
     "postbuild": "workbox generateSW workbox-config.js",
     "dev": "vite",
-    "lint": "prettier \"src/*.{js,ts}\" \"style/**/*.css\" \"*.{html,md,json,yml}\" \"{workbox-,rollup.,vite.}config.js\" --write"
+    "lint": "prettier \"src/**/*\" \"style/**/*.css\" \"*.{html,md,json,yml}\" \"{workbox-,rollup.,vite.}config.js\" --write"
   },
   "dependencies": {
-    "insights-js": "^1.2.10"
+    "fathom-client": "^3.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^1.4.0",
-    "prettier": "~2.3.0",
-    "vite": "^2.3.4",
-    "workbox-cli": "^6.1.5"
+    "@vitejs/plugin-legacy": "^1.6.2",
+    "prettier": "~2.4.1",
+    "vite": "^2.6.14",
+    "workbox-cli": "^6.3.0"
   },
   "prettier": {
     "singleQuote": true,
