--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
-          node-version: '14'
-      - run: npm ci
+          node-version: '16'
+          cache: 'npm'
+      - run: npm install
       - run: npm run lint
       - run: npm run build -- --base=/gameclock/
       - uses: peaceiris/actions-gh-pages@v3
